--- a/app.css
+++ b/app.css
@@ -69,7 +69,13 @@ body {
 .todo {
   display: flex;
   align-items: center;
+  padding: 8px 0;
+  border-bottom: 1px solid;
   justify-content: space-between;
+}
+
+.todo:last-child {
+  border: none;
 }
 .todo_left {
   display: flex;
